Removed unused strings
# 2.00.01 (50878) Apr 19, 2011
> Increased precision of the numerical integration because "to scale" Sun/Earth/Moon orbit is unstable (growing)
# 2.00.00 (50873) Apr 19, 2011
# 1.00.26 (50854) Apr 19, 2011
> Changed clock time reset button from "Reset" to "Clear"
Handled issues for the code review, including some refactoring, see #2801
# 1.00.25 (50657) Apr 14, 2011
Fixed: mass labels appear in the wrong location when initially shown
Added docs and minor refactors for some issues in code review
# 1.00.24 (50589) Apr 12, 2011
> Made the 1 grid spacing the earth-satellite distance in Earth/Satellite mode
# 1.00.23 (50566) Apr 12, 2011
Fixed time readout scale factor for cartoon Sun/Earth/Moon
# 1.00.22 (50564) Apr 12, 2011
Switch cartoon Sun/Earth mode to use same parameters as cartoon Sun/Earth/Moon mode, but with a different time readout scale factor
# 1.00.21 (50558) Apr 12, 2011
> Fixed gravity force arrow scale so that default scaling is 1/2 a grid cell
Fixed: "Return object" should recalculate the gravity force vectors and update them even when paused ... right now it displays the force vectors of the prior situation before it moved the moon or planet.
Fixed: orbital period should be 365 days instead of 357 days for cartoon sun/earth mode
# 1.00.20 (50552) Apr 12, 2011
Improved the performance by buffering round gradient paint graphics for bodies
Switched sim speed slider to use SimSpeedControlPNode, which has improved support for i18n
# 1.00.19 (50427) Apr 7, 2011
> Hid the velocity vector for fixed bodies such as the sun in cartoon mode
# 1.00.18 (50425) Apr 7, 2011
Fixed: sun can't be moved by the user in cartoon modes
# 1.00.17 (50423) Apr 7, 2011
> Renamed "sun" to "star"
> Hold the position of the sun fixed
# 1.00.16 (50041) Mar 21, 2011
> Made it so that vector arrowheads shrink as the vector shrinks
Made it so that vectors are always shown at a minimum size of 10 pixels (even if they would be too small to see)